<resources>
    <string name="app_name">PADC-5-P-WPA-Simple-Habit-Meditate</string>
    <string name="head_name_1">Start Here</string>
    <string name="start">Start</string>
    <string name="duration">5 mins</string>
    <string name="head_name_2">Morning Meditations</string>
    <string name="content_1">Morning Meditation</string>
    <string name="head_name_3">A Healthy Mind</string>
    <string name="content_2">PTSD</string>
    <string name="duration_2">5-10-20 mins</string>
    <string name="head_name_4">New on Simple Habit</string>
    <string name="content_3">Mini Retreat For Moms</string>
    <string name="category_tips">Unguided</string>
    <string name="category_hint">Silence and nature sounds</string>
    <string name="head_name_5">All Topic</string>
    <string name="on_the_go">On The Go</string>
    <string name="menu_title_1">Meditate</string>
    <string name="menu_title_2">Me</string>
    <string name="menu_title_3">More</string>
    <string name="tv_progress">Progress</string>
    <string name="streak">0</string>
    <string name="sessions">0</string>
    <string name="minutes">2</string>
    <string name="text_streak">Current Day Streak</string>
    <string name="text_session">Total Sessions</string>
    <string name="text_total_minutes">Total Minutes</string>
    <string name="limited">Get Unlimited Access</string>
    <string name="best_teacher">To The world\'s best teachers</string>
    <string name="main_content">Simple Habit Starter</string>
    <string name="session_title">Mindful Sleep</string>
    <string name="download">Download</string>
    <string name="session_detail">Learm mindful sleep techniques to use before bed to relax your mind and body.Finally, enjoy deep, quality rest.</string>
    <string name="session">SESSIONS</string>
    <string name="session_count">1</string>
    <string name="session_list_title">Finding Inner Peace</string>
    <string name="session_length">5:28</string>
    <string name="read_more">REAR MORE</string>

</resources>
