<?xml version="1.0" encoding="utf-8"?>
<xyz.waiphyoag.padc_5_p_wpa_simple_habit_meditate.activities.activities.viewpods.Viewpod_Me xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:text="@string/tv_progress"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular_3x" />


        <TextView
            android:id="@+id/tv_streak_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_progress"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/streak"
            android:textAlignment="center"
            android:textColor="#7e57c2"
            android:textSize="@dimen/text_heading_1x" />

        <TextView
            android:id="@+id/tv_streak"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_streak_count"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@string/text_streak"
            android:textAlignment="center"
            android:textColor="#7e57c2" />


        <TextView
            android:id="@+id/tv_session_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_progress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/sessions"
            android:textAlignment="center"
            android:textColor="#18ffff"
            android:textSize="@dimen/text_heading_1x" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_session_count"
            android:layout_centerHorizontal="true"
            android:text="@string/text_session"
            android:textAlignment="center"
            android:textColor="#18ffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_progress"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/minutes"
            android:textAlignment="center"
            android:textColor="#4fc3f7"
            android:textSize="@dimen/text_heading_1x" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_session_count"
            android:layout_marginRight="@dimen/margin_medium_2"

            android:text="@string/text_total_minutes"
            android:textAlignment="center"
            android:textColor="#4fc3f7" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_session_count"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_xxxlarge"
            app:cardCornerRadius="@dimen/margin_card_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f8bbd0">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_medium"
                        android:paddingTop="@dimen/margin_large"
                        android:src="@drawable/ic_whatshot" />

                    <TextView
                        android:id="@+id/tv_unlimited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_xxxlarge"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/limited"
                        android:textColor="@color/white_full"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_unlimited"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:layout_marginLeft="@dimen/margin_xxxlarge"
                        android:text="@string/best_teacher"
                        android:textColor="@color/white_full"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/margin_large"
                        android:src="@drawable/ic_chevron_right" />

                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </RelativeLayout>


</xyz.waiphyoag.padc_5_p_wpa_simple_habit_meditate.activities.activities.viewpods.Viewpod_Me>

