<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#212121"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2">

        <TextView
            android:id="@+id/tv_session_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_count"
            android:textAlignment="center"
            android:textColor="@color/white_full"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_session_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_xxxlarge"
            android:layout_weight="1"
            android:text="@string/session_list_title"
            android:textAlignment="center"
            android:textColor="@color/white_full"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_session_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_length"
            android:textAlignment="center"
            android:textColor="@color/white_full"
            android:textSize="@dimen/text_regular_2x" />

    </LinearLayout>

</RelativeLayout>