<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_xxlarge"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/head_name_1"
        android:textColor="@color/white_full"
        android:textSize="@dimen/text_heading_1x" />


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_content_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_content_1"
                android:layout_width="@dimen/big_content_width"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_dummy_logo_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/iv_content_1"
                android:layout_margin="@dimen/margin_medium_2"
                android:src="@drawable/ic_add_white" />

            <Button
                android:layout_width="@dimen/margin_button_width"
                android:layout_height="@dimen/margin_xlarge"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_large_1"
                android:background="@drawable/button_background"
                android:drawableLeft="@drawable/ic_play_arrow"
                android:drawablePadding="@dimen/margin_button_width_n"
                android:paddingLeft="@dimen/margin_medium_3"
                android:text="@string/start"
                android:textColor="@color/white_full" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_content_1"
                android:layout_alignRight="@id/iv_content_1"
                android:layout_margin="@dimen/margin_medium_2"
                android:text="@string/duration"
                android:textColor="@color/white_full"

                />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>