<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/session_background">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_tool_bar_height"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_session_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="@android:drawable/screen_background_dark_transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_dummy_logo_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/tv_session_main_title"
                    android:text="@string/session_title"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold" />

            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_back" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_xxxlarge"
                        android:src="@drawable/ic_add_white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_medium_3"
                        android:layout_marginTop="@dimen/margin_small"
                        android:src="@drawable/ic_share" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:text="@string/download"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_regular_2x" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_xxlarge"

                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/session_background">

                <TextView
                    android:id="@+id/tv_session_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginRight="@dimen/margin_xxlarge"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:maxLines="2"
                    android:text="@string/session_detail"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular_2x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_session_detail"
                    android:id="@+id/tv_read_more"
                    android:textColor="@color/primary"
                    android:text="@string/read_more"
                    android:layout_centerInParent="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_session"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/tv_read_more"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:text="@string/session"
                    android:textColor="@color/white_full"


                    />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_session_list"
                    android:layout_below="@id/tv_session"
                    android:layout_marginTop="@dimen/margin_medium">

                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:backgroundTint="#80deea"
        android:src="@drawable/ic_play_arrow"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>